# math_optimizer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/approx/: CMakeLists.txt  main.c
examples/err_func/: CMakeLists.txt  main.c
examples/main/: CMakeLists.txt  main.c
examples/neural_net/: CMakeLists.txt  main.c
examples/neural_net/data/: plot.gp
examples/neural_net_func_approx/: CMakeLists.txt  main.c
examples/neural_net_func_approx/data/: plot.gp
examples/optimizer/: CMakeLists.txt  main.c
include/mfo/: approximations.h  arena.h  arrsize.h  err_func.h  gnuplot_utils.h  math_utils.h  neural_net.h  neural_net_activ_funcs.h  neural_net_wrapper.h  optimizer.h
